Fix spacing issue

--- a/src/app.css
+++ b/src/app.css
@@ -54,6 +54,7 @@ body {
 
 .lp-header details {
   position: relative;
+  padding-right: clamp(0.5rem, 0.4rem + 0.5vw, 1rem);
 
   line-height: 1.5;
 }
